--- a/app-assets/css/includes/partials/_app-tabs.scss
+++ b/app-assets/css/includes/partials/_app-tabs.scss
@@ -40,6 +40,7 @@
 				display: block;
 				padding: 0.75em 1em;
 				background-color: $white;
+				border-radius: 5px 5px 0px 0px;
 				font-weight: bold;
 				line-height: 1;
 				text-decoration: none;
